talos/adguard-home/svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: external-opnsense
spec:
  type: ExternalName
  externalName: opnsense.asandov.local
